--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "pnpm exec drizzle-kit generate",
+    "push": "pnpm exec drizzle-kit push",
     "studio": "pnpm exec drizzle-kit studio"
   },
   "dependencies": {
@@ -61,6 +62,7 @@
     "react-day-picker": "9.6.7",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
